rm useless config & add run_train.sh

--- a/configs/configFPN.yaml
+++ b/configs/configFPN.yaml
@@ -1,10 +1,10 @@
 MODEL:
-  DEVICE: "cpu"
+  DEVICE: "cuda"
   NUM_CLASSES: 5
   BACKBONE:
     OUT_CHANNELS: (512, 1024, 512, 256, 256, 256, 256)
   DECODER:
-    NAME: 'SSDDecoder'
+    NAME: 'FPN'
     OUT_CHANNELS: [256, 256, 256, 256, 512, 1024, 512]
     DECONV_KERNEL_SIZE: [2, 2, 2, 2, 2, 2, 2]
     ELMW_TYPE: "prod"
@@ -24,5 +24,5 @@ SOLVER:
   MAX_ITER: 80000
   LR_STEPS: [80000, 100000]
   GAMMA: 0.1
-  BATCH_SIZE: 16
+  BATCH_SIZE: 24
   LR: 1e-3
