--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@ dist/
 *.egg-info
 
 # jpg and xml data
-ssd/data/datasets/VOC2007.*
+ssd/data/datasets/VOC2007/*
+ssd/data/datasets/argumented_data.tar.gz
 ssd/data/datasets/COC770/*
 demo/*
 outputs/*
